start with GET and POST. Running issues into POST. Cannot render to DB. error is: TypeError: Client was passed a null or undefined query

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Quest'z</h1>
+    <h1>Quests for The Day</h1>
 
     <section class="submission">
-        <input class="inputbox" type="text" placement="Mission details">
+        <input class="inputBox" type="text" placement="Mission details">
         <button class="submit-btn">Submit</button>
     </section>
 
