yay! got background color to change

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +10,21 @@
     <script src="./vendor/jquery-3.6.0.min.js"></script>
     <script src="./client.js"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
+
 <body>
-    <h1>Quests for The Day</h1>
+    <header>
+        <h1>Quests for The Day</h1>
+    </header>
 
     <section class="submission">
         <input class="inputBox" type="text" placement="Mission details">
         <button class="submit-btn">Submit</button>
     </section>
 
-    <section>
+    <section">
         <ul class="taskList">
         </ul>
     </section>
@@ -35,4 +41,5 @@
 
 
 </body>
+
 </html>
