--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,8 +10,7 @@
     <script src="./vendor/jquery-3.6.0.min.js"></script>
     <script src="./client.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -27,7 +26,7 @@
     <section">
         <ul class="taskList">
         </ul>
-    </section>
+        </section>
 
 
 
